# Ardesco-SDK

./: .gitignore  README.md  ardcmdprompt.cmd  ardesco.cmake
apps/52ipc_simple/: CMakeLists.txt  app.overlay  prj.conf
apps/52ipc_simple/src/: main.c
apps/LTE_connect/: README.rst  prj.conf
apps/LTE_connect/src/: main.c
apps/bluetooth_52app/: CMakeLists.txt  README.rst  app.overlay  prj.conf
apps/bluetooth_52app/src/: enable_gpio_reset.c  main.c
apps/bluetooth_becon_scan/: CMakeLists.txt  README.rst  app.overlay  child_secure_partition_manager.conf  prj.conf
apps/bluetooth_becon_scan/src/: ble.c  ble.h  main.c  nrf52840_reset.c
apps/grove_i2c/: prj.conf
apps/hello_52840/: app.overlay  prj.conf
apps/hello_52840/src/: main.c
apps/using_sensors/: prj.conf
apps/using_sensors/src/: main.c
ard1.4/boards/arm/nrf9160_ard0021B/: board_nonsecure.c
ard1.4/boards/arm/nrf9160_ard0022B/: board_nonsecure.c
ard1.5/boards/arm/nrf9160_ard0021B/: Kconfig.board  nrf9160_ard0021B_defconfig
ard1.5/boards/arm/nrf9160_ard0022B/: Kconfig.board  Kconfig.defconfig  nrf9160_ard0022Bns_defconfig
drivers/: Kconfig  adp5360.h
drivers/adp5360/: adp5360.c
include/: accel_sensor.h  ard_led.h  ardesco.h  back_compat.h  button_lib.h  gpio_compat.h  serial_52lib.h
lib/button_lib/: CMakeLists.txt  button_lib.c
lib/buzzer_lib/: CMakeLists.txt  ard_buzzer.h  buzzer_lib.c  buzzer_lib.h
lib/ipclib/: ipc_52lowlevel.c
lib/led_lib/: led_lib_ard.c
lib/sensor_lib/: accel.c  env.c  sensor_common.c
lib/serial_52lib/: serial_52lib.c
lib/usb_uart_52lib/: usb_uart.c
(+11 files in other folders)
